# perfcat

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  vue.config.js
.github/workflows/: build.yml  perfcat_native_ci.yml
backend/: adb.go  backend.go
native/: CMakeLists.txt  pch.hpp  setup.sh
native/hook/: CMakeLists.txt  exports.cpp  pch.hpp
native/hook/hook/: hook.hpp  hook_dxgi.cpp  hook_dxgi.hpp  hook_win.cpp  hook_win.hpp
native/hook/tests/: main.cpp  main_win.hpp
native/injector/: CMakeLists.txt  exports.cpp  injector.hpp  pch.hpp  process.hpp
native/injector/injector/: injector.hpp
native/injector/installer/: installer.hpp  installer_win.cpp  installer_win.hpp
native/injector/process/: process.hpp  process_win.cpp  process_win.hpp  process_win64.cpp  process_win64.hpp
scripts/: macos-build.sh  macos-setup-codesign-action.sh  macos-setup-codesign.sh
src/: App.vue  background.ts  main.ts  native.ts  preload.js
src/backends/: ibackend.ts  macos.ts  windows.ts
src/charts/: cpu-chart.ts  frame-chart.ts  jank-chart.ts  mem-chart.ts
src/components/: AppPicker.vue  HelloWorld.vue  LangPicker.vue
src/components/charts/: CpuChart.vue  MemChart.vue
src/i18n/: en.ts  index.ts  zh-cn.ts
src/router/: index.ts
src/stores/: alert.ts  language.ts  monitor.ts
src/views/: AboutView.vue  PerfView.vue
